[gd_scene load_steps=22 format=2]

[ext_resource path="res://graphics/UI/romania flag.png" type="Texture" id=1]
[ext_resource path="res://graphics/homespun.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://graphics/UI/Button Hover.png" type="Texture" id=3]
[ext_resource path="res://graphics/UI/Button Clicked.png" type="Texture" id=4]
[ext_resource path="res://graphics/UI/Button.png" type="Texture" id=5]
[ext_resource path="res://graphics/UI/Button Disabled.png" type="Texture" id=6]
[ext_resource path="res://MainMenu.gd" type="Script" id=7]
[ext_resource path="res://graphics/UI/SliderPin.png" type="Texture" id=8]
[ext_resource path="res://graphics/UI/Slider.png" type="Texture" id=9]
[ext_resource path="res://graphics/UI/SliderPinSelected.png" type="Texture" id=10]
[ext_resource path="res://sound/effects/shot.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/music/Voices Of Christmas Past/05 Henry Burr - Hark the Herald Angels Sing [1907].ogg" type="AudioStream" id=12]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec2 position = UV;
	float yMod = sin(position.x * 20.0 + TIME * 3.0) * sin(position.x * 5.0 + TIME * 1.5) * 0.02;
	position.x += sin(position.y + TIME) * 0.02;
	position.y += yMod;
	COLOR = texture(TEXTURE, position);
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 130, 16 )
margin_left = 18.4873
margin_right = 19.3276

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 10
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -170.5
margin_right = 256.0
margin_bottom = 170.5
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.686275 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Main"]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "OPERATION SNAGOV"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -96.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 8.0
margin_right = 66.0
margin_bottom = 56.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Buttons/StartGame"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "START"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 60.0
margin_right = 66.0
margin_bottom = 108.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Buttons/Settings"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Tutorial" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 112.0
margin_right = 66.0
margin_bottom = 160.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Buttons/Tutorial"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "TUTORIAL"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 164.0
margin_right = 66.0
margin_bottom = 212.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Buttons/Exit"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "EXIT"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Main/Buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 184.0
margin_top = 192.0
margin_right = 314.0
margin_bottom = 240.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main/Buttons/Credits"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Settings"]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Control" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Control" parent="Settings/Sound"]
margin_left = 96.0
margin_right = 416.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/Sound/Music"]
margin_left = 44.0
margin_right = 188.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Music Volume"
valign = 1

[node name="MusicSlider" type="HSlider" parent="Settings/Sound/Music"]
margin_left = 32.0
margin_top = 36.0
margin_right = 288.0
margin_bottom = 52.0
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area = SubResource( 7 )
min_value = -80.0
max_value = 0.0

[node name="Effects" type="Control" parent="Settings/Sound"]
margin_left = 96.0
margin_top = 68.0
margin_right = 416.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/Sound/Effects"]
margin_left = 44.0
margin_right = 188.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 5 )
text = "Sound Effects Volume"
valign = 1

[node name="EffectsSlider" type="HSlider" parent="Settings/Sound/Effects"]
margin_left = 32.0
margin_top = 36.0
margin_right = 288.0
margin_bottom = 52.0
custom_icons/grabber_highlight = ExtResource( 10 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 6 )
custom_styles/grabber_area = SubResource( 7 )
min_value = -80.0
max_value = 0.0

[node name="SoundEffectDemo" type="AudioStreamPlayer" parent="Settings/Sound/Effects"]
stream = ExtResource( 11 )
bus = "Effects"

[node name="SettingsBack" type="TextureButton" parent="Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -68.0
margin_top = 196.0
margin_right = 62.0
margin_bottom = 244.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Settings/SettingsBack"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="Credits"]
anchor_right = 1.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "CREDITS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 56.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 8 )
text = "Game Design, Coding, Graphics
Charlie Gray - https://charliegray.itch.io/

Romanian Flag
Wikipedia - https://en.wikipedia.org/wiki/Flag_of_Romania

Music
\"Voices of Christmas Past\" by Dawn Of Sound - 
http://www.dawnofsound.com/2008/12/voices-of-christmas-past-2/

Sound Effects
All Sounds - http://www.theallsounds.com/"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsBack" type="TextureButton" parent="Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 256.0
margin_right = 98.0
margin_bottom = 304.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits/CreditsBack"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FullMusicList" type="TextureButton" parent="Credits"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 56.0
margin_top = 256.0
margin_right = 186.0
margin_bottom = 304.0
rect_scale = Vector2( 1, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits/FullMusicList"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
custom_fonts/font = SubResource( 9 )
text = "Full Music List"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FullMusicList" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicListBack" type="TextureButton" parent="FullMusicList"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 256.0
margin_right = 98.0
margin_bottom = 304.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMusicList/MusicListBack"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FullMusicList"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -36.0
custom_fonts/font = SubResource( 8 )
text = "Prince's Orchestra - On A Christmas Morning [1911]
Edison Male Quartette - Sleigh Ride Party, Jingle Bells [1898]
Victor Mixed Chorus - Messiah - And the Glory of the Lord [1915]
Henry Burr - Hark the Herald Angels Sing [1907]
Haydn Quartet - Silent Night, Hallowed Night [1905]
Cal Stewart - Christmas Time at Pumpkin Center [1905]
Francis J. Lapitino - Christmas Hymns [1917]
Lewis James - When the Christmas Chimes Are Ringing [1922]
Harry MacDonough - The Star of Bethlehem [1909]
Byron G. Harlan - Come and Spend Christmas With Me [1909]
Trinity Choir - Oh, Little Town of Bethlehem [1916]
John McCormack and William Reitz - Adeste Fideles [1915]
Victor Herbert Orchestra - Chinese Dance, Dance of the Mirilitons (from the Nutcracker) [1913]
Peerless Quartet - On A Good Old Time Sleigh Ride [1913]
Trinity Choir - Angels from the Realms of Glory [1916]
Trinity Quartet - While Shepherds Watched their Flocks by Night, Christians Awake [1921]
Venetian Trio - Noel (Holy Night) [1916]
Navada Van der Veer - Auld Lang Syne [1921]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true
bus = "Music"
[connection signal="pressed" from="Main/Buttons/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="Main/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Buttons/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="Main/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Main/Buttons/Credits" to="." method="_on_Credits_pressed"]
[connection signal="value_changed" from="Settings/Sound/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Settings/Sound/Effects/EffectsSlider" to="." method="_on_EffectsSlider_value_changed"]
[connection signal="pressed" from="Settings/SettingsBack" to="." method="_on_SettingsBack_pressed"]
[connection signal="pressed" from="Credits/CreditsBack" to="." method="_on_CreditsBack_pressed"]
[connection signal="pressed" from="Credits/FullMusicList" to="." method="_on_FullMusicList_pressed"]
[connection signal="pressed" from="FullMusicList/MusicListBack" to="." method="_on_MusicListBack_pressed"]
[connection signal="finished" from="Music" to="." method="_on_Music_finished"]
